--- a/medicalcorps.html
+++ b/medicalcorps.html
@@ -9,140 +9,123 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             margin: 0;
-            padding: 0;
+            padding: 20px;
             background-color: #f4f4f4;
             color: #333;
         }
         header {
-            background: #2c3e50;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
         }
         img {
-            max-width: 150px;
+            max-width: 200px; /* Bigger logo */
+            margin-right: 20px;
         }
-        nav {
-            margin: 20px 0;
-        }
-        nav a {
-            margin: 0 15px;
+        h1 {
             color: #2c3e50;
-            text-decoration: none;
+            margin: 0;
+            font-size: 36px; /* Title size */
         }
-        h1, h2, h3 {
+        h2 {
             color: #2c3e50;
+            margin-top: 30px;
         }
         section {
-            margin: 20px;
+            margin-bottom: 20px;
             padding: 20px;
             background: #fff;
             border-radius: 8px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #2c3e50;
-            color: white;
-            position: relative;
-            bottom: 0;
-            width: 100%;
+        p, ul {
+            margin: 10px 0;
+        }
+        ul {
+            padding-left: 20px;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>United Federation Medical Corps</h1>
     <img src="https://i.imgur.com/ImxyuQq.png" alt="United Federation Medical Corps Logo">
+    <h1>United Federation Medical Corps</h1>
 </header>
-
-<nav>
-    <a href="#rules-of-tryout">Rules of Tryout</a>
-    <a href="#role-of-medical-corps">Role of Medical Corps</a>
-    <a href="#basic-awareness-test">Basic Awareness Test</a>
-    <a href="#communication-and-teamwork">Communication and Teamwork</a>
-    <a href="#locating-injured-personnel">Locating Injured Personnel</a>
-</nav>
 
 <section id="rules-of-tryout">
     <h2>1. Rules of Tryout</h2>
-    <p>To maintain the integrity and effectiveness of the United Federation Medical Corps, all recruits must adhere to the following rules during the tryout process:</p>
+    <p>The following rules must be followed by all recruits during the tryout process to maintain the integrity of the United Federation Medical Corps:</p>
     <ul>
-        <li><strong>Respect:</strong> Treat all personnel with respect, including fellow recruits and trainers.</li>
-        <li><strong>Punctuality:</strong> Arrive on time for all scheduled training sessions and evaluations.</li>
-        <li><strong>Focus:</strong> Pay attention to instructions and engage actively in all training exercises.</li>
-        <li><strong>Communication:</strong> Use clear and respectful language when communicating with officers and peers.</li>
-        <li><strong>Commitment:</strong> Show dedication to the values and mission of the Medical Corps.</li>
+        <li><strong>Respect:</strong> All recruits must treat each other, as well as trainers and officers, with utmost respect.</li>
+        <li><strong>Punctuality:</strong> Arrive on time for all scheduled training sessions. Late arrivals may be disqualified.</li>
+        <li><strong>Focus:</strong> Remain attentive and engaged during all training exercises. Distractions can lead to serious consequences in the field.</li>
+        <li><strong>Communication:</strong> Use clear and respectful language at all times. Effective communication is critical in medical situations.</li>
+        <li><strong>Commitment:</strong> Show a strong commitment to the values and mission of the Medical Corps. Your determination is essential.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
-Welcome recruits! You are here today to begin your journey with the United Federation Medical Corps. Remember, respect and punctuality are crucial. As we progress through the training, stay focused and committed. Let’s ensure we all adhere to these rules. Good luck!
+Welcome recruits! Today marks the beginning of your journey with the United Federation Medical Corps. Remember, respect and punctuality are crucial. Pay close attention to the instructions given and stay focused. Let's work together to ensure everyone adheres to these rules. Good luck!
     </pre>
 </section>
 
 <section id="role-of-medical-corps">
     <h2>2. Role of Medical Corps</h2>
-    <p>The United Federation Medical Corps plays a vital role in the operational readiness and safety of our forces. The key responsibilities include:</p>
+    <p>The United Federation Medical Corps is integral to the operational readiness and effectiveness of our forces. The primary responsibilities of the Medical Corps include:</p>
     <ul>
-        <li><strong>Providing Medical Care:</strong> Ensure immediate medical assistance to injured personnel during missions.</li>
-        <li><strong>Training and Education:</strong> Equip officers and recruits with the necessary skills and knowledge for medical emergencies.</li>
-        <li><strong>Coordination:</strong> Work closely with other units to facilitate medical support in various operational contexts.</li>
-        <li><strong>Emergency Response:</strong> Prepare for and respond to medical emergencies, ensuring rapid and effective care.</li>
+        <li><strong>Providing Medical Care:</strong> Medical Corps personnel are responsible for providing immediate medical assistance to injured soldiers on the battlefield.</li>
+        <li><strong>Training and Education:</strong> The Corps trains recruits and officers on essential medical procedures and emergency response tactics.</li>
+        <li><strong>Coordination:</strong> Medical Corps members must work closely with other military units to ensure seamless medical support in diverse operational environments.</li>
+        <li><strong>Emergency Response:</strong> In the event of medical emergencies, the Corps must be ready to respond quickly and effectively, ensuring the safety of all personnel.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
-As members of the United Federation Medical Corps, your primary role is to provide medical care and support during missions. This includes immediate assistance, training fellow recruits, and ensuring effective coordination with other units. Remember, your actions can save lives!
+As part of the United Federation Medical Corps, your primary role is to provide medical care and support during missions. You will train extensively to ensure you are prepared for any medical emergencies. Your actions can mean the difference between life and death. Let's get started!
     </pre>
 </section>
 
 <section id="basic-awareness-test">
     <h2>3. Basic Awareness Test (Adhering to Face Commands)</h2>
-    <p>All recruits must complete a Basic Awareness Test to demonstrate their ability to follow commands and maintain situational awareness. The test consists of recognizing and responding to face commands, which include:</p>
+    <p>Recruits must complete the Basic Awareness Test to demonstrate their understanding of face commands and situational awareness. This test includes:</p>
     <ul>
-        <li><strong>Attention:</strong> Stand still and focus on the speaker.</li>
-        <li><strong>Forward March:</strong> Move in a straight line toward the designated area.</li>
-        <li><strong>Halt:</strong> Stop immediately and await further instructions.</li>
-        <li><strong>Medical Attention:</strong> Identify the nearest injured personnel and respond appropriately.</li>
+        <li><strong>Attention:</strong> Stand still and focus on the person giving commands.</li>
+        <li><strong>Forward March:</strong> Move in a straight line to the designated area when instructed.</li>
+        <li><strong>Halt:</strong> Stop immediately and wait for further directions.</li>
+        <li><strong>Medical Attention:</strong> Quickly identify the nearest injured personnel and assess their condition.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
-Today, we will conduct the Basic Awareness Test. Pay close attention to my face commands, as they will help ensure your readiness in the field. Remember to stay alert and responsive to instructions. Let's begin!
+Today, we will conduct the Basic Awareness Test. It's crucial that you pay attention to my commands and respond appropriately. This exercise is designed to enhance your readiness in the field. Let's begin the test!
     </pre>
 </section>
 
 <section id="communication-and-teamwork">
     <h2>4. Communication and Teamwork</h2>
-    <p>Effective communication and teamwork are essential skills for all medical officers. Recruits will engage in exercises designed to improve their ability to work together under pressure, including:</p>
+    <p>Effective communication and teamwork are vital skills for all medical officers. Recruits will participate in exercises aimed at improving these abilities, including:</p>
     <ul>
-        <li><strong>Role-Playing Scenarios:</strong> Practice communication in simulated emergency situations.</li>
-        <li><strong>Debriefing Sessions:</strong> Discuss experiences and feedback to enhance teamwork.</li>
-        <li><strong>Signal and Command Drills:</strong> Learn to communicate using both verbal commands and non-verbal signals.</li>
+        <li><strong>Role-Playing Scenarios:</strong> Engage in simulated emergency situations to practice communication under pressure.</li>
+        <li><strong>Debriefing Sessions:</strong> After exercises, recruits will discuss their experiences to learn from one another and improve future performance.</li>
+        <li><strong>Signal and Command Drills:</strong> Learn to communicate using verbal commands and non-verbal signals during chaotic situations.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
-Communication and teamwork are crucial in our operations. Throughout this training, we will practice various scenarios that require clear communication and collaboration. Pay attention to your teammates and work together to ensure effective responses. Let's proceed with the drills!
+Communication and teamwork are essential in our line of work. Throughout this training, we will practice various scenarios that require you to work together effectively. Always be aware of your team members and communicate clearly. Let’s get started with the drills!
     </pre>
 </section>
 
 <section id="locating-injured-personnel">
     <h2>5. Locating Injured Personnel and Extraction</h2>
-    <p>Recruits will learn the procedures for locating and safely extracting injured personnel. Key points include:</p>
+    <p>Recruits will learn the crucial procedures for locating and safely extracting injured personnel from hazardous environments. Key points include:</p>
     <ul>
-        <li><strong>Assessment:</strong> Quickly assess the scene for hazards and the condition of injured personnel.</li>
-        <li><strong>Extraction Techniques:</strong> Utilize proper techniques to safely move injured individuals.</li>
-        <li><strong>Reporting:</strong> Communicate the situation to command and request additional support if needed.</li>
+        <li><strong>Assessment:</strong> Quickly assess the scene for any dangers before approaching injured personnel.</li>
+        <li><strong>Extraction Techniques:</strong> Practice safe methods to move injured individuals without causing further harm.</li>
+        <li><strong>Reporting:</strong> Once the situation is stabilized, communicate with command and request any necessary backup or additional support.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
-In the field, your ability to locate and extract injured personnel can make a significant difference. We will practice assessment techniques and extraction methods to ensure you are prepared for real-life scenarios. Always remember to report your findings to command. Let’s begin the practical exercises!
+In the field, your ability to locate and safely extract injured personnel can save lives. Today, we will practice the assessment and extraction techniques necessary to handle such situations. Remember to report all findings to command. Let's begin the practical exercises!
     </pre>
 </section>
-
-<footer>
-    <p>&copy; 2024 United Federation Medical Corps. All rights reserved.</p>
-</footer>
 
 </body>
 </html>
