--- a/medicalcorps.html
+++ b/medicalcorps.html
@@ -6,43 +6,54 @@
     <title>United Federation Medical Corps</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
+            font-family: 'Arial', sans-serif;
+            background-color: #1b1b1b; /* Dark background */
+            color: #eaeaea; /* Light text for contrast */
             margin: 0;
             padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
+            line-height: 1.6;
         }
         header {
             display: flex;
             align-items: center;
-            margin-bottom: 20px;
+            margin-bottom: 30px;
+            border-bottom: 2px solid #3a3a3a; /* Futuristic line */
+            padding-bottom: 20px;
         }
         img {
-            max-width: 200px; /* Bigger logo */
+            max-width: 200px; /* Adjust logo size */
             margin-right: 20px;
         }
         h1 {
-            color: #2c3e50;
+            color: #00bfff; /* Light blue for the title */
             margin: 0;
             font-size: 36px; /* Title size */
         }
         h2 {
-            color: #2c3e50;
-            margin-top: 30px;
+            color: #00bfff; /* Light blue for section titles */
+            margin-top: 20px;
+            border-bottom: 1px solid #3a3a3a; /* Section underlines */
+            padding-bottom: 10px;
         }
         section {
             margin-bottom: 20px;
             padding: 20px;
-            background: #fff;
+            background: #292929; /* Darker section background */
             border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
         }
         p, ul {
             margin: 10px 0;
+            word-wrap: break-word; /* Ensure text doesn't run off */
         }
         ul {
             padding-left: 20px;
+        }
+        pre {
+            background-color: #333; /* Dark background for scripts */
+            padding: 10px;
+            border-radius: 5px;
+            overflow-x: auto; /* Allow scrolling for long text */
         }
     </style>
 </head>
@@ -55,13 +66,13 @@
 
 <section id="rules-of-tryout">
     <h2>1. Rules of Tryout</h2>
-    <p>The following rules must be followed by all recruits during the tryout process to maintain the integrity of the United Federation Medical Corps:</p>
+    <p>To maintain the integrity and professionalism of the United Federation Medical Corps, all recruits must adhere to the following rules during the tryout process:</p>
     <ul>
-        <li><strong>Respect:</strong> All recruits must treat each other, as well as trainers and officers, with utmost respect.</li>
-        <li><strong>Punctuality:</strong> Arrive on time for all scheduled training sessions. Late arrivals may be disqualified.</li>
-        <li><strong>Focus:</strong> Remain attentive and engaged during all training exercises. Distractions can lead to serious consequences in the field.</li>
-        <li><strong>Communication:</strong> Use clear and respectful language at all times. Effective communication is critical in medical situations.</li>
-        <li><strong>Commitment:</strong> Show a strong commitment to the values and mission of the Medical Corps. Your determination is essential.</li>
+        <li><strong>Respect:</strong> Treat all individuals with respect and dignity, including fellow recruits and trainers.</li>
+        <li><strong>Punctuality:</strong> Arrive on time for all training sessions to demonstrate commitment and responsibility.</li>
+        <li><strong>Focus:</strong> Remain attentive during training exercises; distractions can jeopardize safety and learning.</li>
+        <li><strong>Communication:</strong> Use clear and respectful language at all times; effective communication is essential in medical situations.</li>
+        <li><strong>Commitment:</strong> Show a strong dedication to the values and mission of the Medical Corps; your determination is crucial.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
@@ -71,12 +82,12 @@ Welcome recruits! Today marks the beginning of your journey with the United Fede
 
 <section id="role-of-medical-corps">
     <h2>2. Role of Medical Corps</h2>
-    <p>The United Federation Medical Corps is integral to the operational readiness and effectiveness of our forces. The primary responsibilities of the Medical Corps include:</p>
+    <p>The United Federation Medical Corps plays a vital role in ensuring operational readiness and effectiveness. The primary responsibilities of the Corps include:</p>
     <ul>
-        <li><strong>Providing Medical Care:</strong> Medical Corps personnel are responsible for providing immediate medical assistance to injured soldiers on the battlefield.</li>
-        <li><strong>Training and Education:</strong> The Corps trains recruits and officers on essential medical procedures and emergency response tactics.</li>
-        <li><strong>Coordination:</strong> Medical Corps members must work closely with other military units to ensure seamless medical support in diverse operational environments.</li>
-        <li><strong>Emergency Response:</strong> In the event of medical emergencies, the Corps must be ready to respond quickly and effectively, ensuring the safety of all personnel.</li>
+        <li><strong>Providing Medical Care:</strong> Deliver immediate medical assistance to injured soldiers on the battlefield.</li>
+        <li><strong>Training and Education:</strong> Equip recruits and officers with essential medical procedures and emergency response tactics.</li>
+        <li><strong>Coordination:</strong> Work closely with other military units to ensure seamless medical support in diverse operational environments.</li>
+        <li><strong>Emergency Response:</strong> Be prepared to respond quickly and effectively to medical emergencies, ensuring personnel safety.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
@@ -86,7 +97,7 @@ As part of the United Federation Medical Corps, your primary role is to provide 
 
 <section id="basic-awareness-test">
     <h2>3. Basic Awareness Test (Adhering to Face Commands)</h2>
-    <p>Recruits must complete the Basic Awareness Test to demonstrate their understanding of face commands and situational awareness. This test includes:</p>
+    <p>To demonstrate understanding of face commands and situational awareness, recruits must complete the Basic Awareness Test, which includes:</p>
     <ul>
         <li><strong>Attention:</strong> Stand still and focus on the person giving commands.</li>
         <li><strong>Forward March:</strong> Move in a straight line to the designated area when instructed.</li>
@@ -104,8 +115,8 @@ Today, we will conduct the Basic Awareness Test. It's crucial that you pay atten
     <p>Effective communication and teamwork are vital skills for all medical officers. Recruits will participate in exercises aimed at improving these abilities, including:</p>
     <ul>
         <li><strong>Role-Playing Scenarios:</strong> Engage in simulated emergency situations to practice communication under pressure.</li>
-        <li><strong>Debriefing Sessions:</strong> After exercises, recruits will discuss their experiences to learn from one another and improve future performance.</li>
-        <li><strong>Signal and Command Drills:</strong> Learn to communicate using verbal commands and non-verbal signals during chaotic situations.</li>
+        <li><strong>Debriefing Sessions:</strong> Discuss experiences after exercises to learn from one another and improve performance.</li>
+        <li><strong>Signal and Command Drills:</strong> Communicate using verbal commands and non-verbal signals during chaotic situations.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
@@ -115,11 +126,11 @@ Communication and teamwork are essential in our line of work. Throughout this tr
 
 <section id="locating-injured-personnel">
     <h2>5. Locating Injured Personnel and Extraction</h2>
-    <p>Recruits will learn the crucial procedures for locating and safely extracting injured personnel from hazardous environments. Key points include:</p>
+    <p>Recruits will learn crucial procedures for locating and safely extracting injured personnel from hazardous environments. Key points include:</p>
     <ul>
         <li><strong>Assessment:</strong> Quickly assess the scene for any dangers before approaching injured personnel.</li>
         <li><strong>Extraction Techniques:</strong> Practice safe methods to move injured individuals without causing further harm.</li>
-        <li><strong>Reporting:</strong> Once the situation is stabilized, communicate with command and request any necessary backup or additional support.</li>
+        <li><strong>Reporting:</strong> Communicate findings with command and request any necessary backup or additional support once stabilized.</li>
     </ul>
     <h3>Script for Officers:</h3>
     <pre>
