--- a/resource/officerresource.html
+++ b/resource/officerresource.html
@@ -44,7 +44,7 @@
                     </tr>
                     <tr>
                         <td>Brigadier General</td>
-                        <td>Handpicked by Brigadier Generals and above</td>
+                        <td>-</td>
                     </tr>
                     <tr>
                         <td>Colonel</td>
@@ -64,71 +64,71 @@
                     </tr>
                     <tr>
                         <td>Lieutenant</td>
-                        <td>-</td>
+                        <td>Handpicked by Senior Officer+</td>
                     </tr>
                     <tr>
                         <td>Chief Warrant Officer</td>
-                        <td>-</td>
+                        <td>Handpicked by Senior Officer+</td>
                     </tr>
                     <tr>
                         <td>Warrant Officer</td>
-                        <td>-</td>
+                        <td>Handpicked by Senior Officer+</td>
                     </tr>
                     <tr>
                         <td>Academic Officer</td>
-                        <td>-</td>
+                        <td>Handpicked by Senior Officer+</td>
                     </tr>
                     <tr>
                         <td>Sergeant Major</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+</td>
                     </tr>
                     <tr>
                         <td>Sergeant First Class</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+</td>
                     </tr>
                     <tr>
                         <td>Master Sergeant</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+</td>
                     </tr>
                     <tr>
                         <td>Staff Sergeant</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+</td>
                     </tr>
                     <tr>
                         <td>Sergeant</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+</td>
                     </tr>
                     <tr>
                         <td>Corporal</td>
-                        <td>-</td>
-                    </tr>
-                    <tr>
-                        <td>Specialist</td>
-                        <td>Promotions based on contributions and activity</td>
+                        <td>Handpicked by Officer+ - Must Lead A Squad</td>
                     </tr>
                     <tr>
                         <td>Lance Corporal</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+ - 2 Weeks Active - Host 3 Trainings</td>
+                    </tr>
+                    <tr>
+                        <td>Specialist</td>
+                        <td>Handpicked by Officer+ - 3 Weeks Active - Recruit 5 Grunts (Require Them To Wedge)</td>
                     </tr>
                     <tr>
                         <td>Private First Class</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+ - Attend One Event</td>
                     </tr>
                     <tr>
                         <td>Private Second Class</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+ - Attend One Event</td>
                     </tr>
                     <tr>
                         <td>Private</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+ - Attend One Event</td>
                     </tr>
                     <tr>
                         <td>Grunt</td>
-                        <td>-</td>
+                        <td>Handpicked by Officer+ - Attend One Event</td>
                     </tr>
                     <tr>
                         <td>Conscript</td>
-                        <td>Use grunt morphs and limited to pistols only to prevent RK incidents</td>
+                        <td>Handpicked by Officer+ - Attend One Event</td>
                     </tr>
                 </tbody>
             </table>
@@ -148,7 +148,6 @@
             <h4>Steps for Promotion</h4>
             <ol>
                 <li>Review Performance</li>
-                <li>Prepare Documentation</li>
                 <li>Use the Command</li>
                 <li>Notify the Member</li>
                 <li>Log the Promotion</li>
@@ -165,10 +164,9 @@
             <h4>Steps for Demotion</h4>
             <ol>
                 <li>Evaluate Concerns</li>
-                <li>Consult with Other Officers</li>
+                <li>Consult with Other Officers if the demotion is more serious.</li>
                 <li>Use the Command</li>
                 <li>Notify the Member</li>
-                <li>Log the Demotion</li>
             </ol>
         </section>
 
@@ -216,9 +214,7 @@
             <h3>Issuing a Strike</h3>
             <h4>Steps to Issue a Strike</h4>
             <ol>
-                <li>Document Incidents</li>
-                <li>Consult with Other Officers</li>
-                <li>Use the Command</li>
+                <li>Use the /Strike Command</li>
                 <li>Notify the Member</li>
             </ol>
 
@@ -227,7 +223,7 @@
             <p>Maintain a detailed log of strikes issued.</p>
 
             <h4>Removing Strikes</h4>
-            <p>Define a process for removing strikes based on improvement.</p>
+            <p>Define your own process for removing strikes based on improvement.</p>
         </section>
     </main>
 
