--- a/resource/handbook.html
+++ b/resource/handbook.html
@@ -77,7 +77,7 @@
         <section id="bat-script">
             <h2>BAT Script</h2>
             <p><strong>Officer:</strong> Attention! Permission to Speak (PTS) is now active. Any unauthorized speaking will result in a strike. Remember, the limit is three strikes. Exceeding this limit will lead to dismissal.</p>
-            <p>You are to address me as "Sir," and "Sir" only. Do you understand? Discipline is paramount during this training. Failure to comply with orders or expectations will result in your dismissal.</p>
+            <p>You are to address me as "Sir," and "Sir" only. Do you understand? Failure to comply with orders or expectations will result in your dismissal.</p>
             <p>We will now proceed to the Faces section. Listen closely and observe my demonstration; do not perform the movements yet.</p>
             <ul>
                 <li><strong>Left Face:</strong> Rotate 90 degrees to your left.</li>
