--- a/timeline.html
+++ b/timeline.html
@@ -339,7 +339,7 @@
 
     <!-- Event 2 (Right) -->
     <div class="event left">
-      <h2>1970 to 1989 - The Cold War Continues</h2>
+      <h2>1970 to 1989 - The Cold War Continues - United Federation Paramilitary Group Founded</h2>
       
       <div class="event-subsection">
         <h3>Proxy Wars and Political Maneuvering</h3>
@@ -349,6 +349,12 @@
       <div class="event-subsection">
         <h3>Arms Race and Détente</h3>
         <p>This period sees an ongoing arms race, including the development of nuclear weapons, but also moments of détente, where tensions temporarily ease.</p>
+      </div>
+    </div>
+
+      <div class="event-subsection">
+        <h3>United Federation Paramilitary Group</h3>
+        <p>A unified force of military veterans, private security, and weapon experts formed to combat rising gang and mob violence in the U.S. Operating outside government control, they used advanced tactics and guerrilla warfare to dismantle criminal empires. The federation had a lot of numbers inside of it as it continued to expand its influence, while keeping themselves relatively underground.</p>
       </div>
     </div>
 
